# collectHardwareInfo

./: .gitignore  CMakeLists.txt  Readme.md  readBinaryFileAndPrintToScreen.cpp  readHardwareAndWriteToBinaryFile.cpp
